# info-tv

./: .gitignore  CMakeLists.txt  COPYING.md  README.md  TODO.md
media/: logo.ascii
src/: CMakeLists.txt  db_connection.cc  db_connection.h  event.cc  event.h  event_backend_interface.h  event_model.cc  event_model.h  event_view.cc  event_view.h  google_calendar_backend.cc  google_calendar_backend.h  http_get.cc  http_get.h  ical_backend.cc  ical_backend.h  icalendar.cc  icalendar.h  main.cc  motd_model.cc  motd_model.h  motd_view.cc  motd_view.h  parser.cc  parser.h  pop_calendar_backend.cc  pop_calendar_backend.h  status_view.cc  status_view.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h  ui.cc  ui.h  utility.cc  utility.h  version.cc  view_interface.h
test/: CMakeLists.txt  db_connection_test.cc  event_model_test.cc  event_test.cc  event_view_test.cc  google_calendar_backend_test.cc  ical_backend_test.cc  parser_test.cc  pop_calendar_backend_test.cc  status_view_test.cc
test/test_json/: event_end_no_datetime.json  event_end_wrong_format_datetime.json  event_no_end.json  event_no_kind.json  event_no_start.json  event_no_status.json  event_no_summary.json  event_start_no_datetime.json  event_start_wrong_format_datetime.json  event_wrong_kind.json  event_wrong_status.json  no_events.json  no_kind.json  tentative_event.json  working.json  wrong_kind.json
util/: git_rev_parse.sh
